@@ -66,7 +66,7 @@ hr {height:1px; background:#999; border:0; margin:0 0 10px;}
 /* ALIGNMENTS */
 .alignright {float:right;}
 .alignleft {float:left;}
-.aligncenter {display:block; margin-left:auto; margin-right:auto;}
+.aligncenter {clear:both; display:block; margin-left:auto; margin-right:auto;}
 
 
 /* TABLE AND LISTS */
