@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: https://www.guido.site/themes
-Version: 6.2
+Version: 6.3
 Author: Guido
 Author URI: https://www.guido.site
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the native categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
@@ -58,19 +58,16 @@ table {
 }
 
 
+/* CLEAR DIVS THAT CONTAIN FLOATING ELEMENTS */
+#header-first:after, #header-second:after, #header-third:after, #categories-three:after, #categories-four:after, .entry-content:after, .more:after, .post-nav:after, .comment-nav:after, #footer-widgets:after {content:''; display:block; height:0; clear:both;}
+
+
 /* HTML */
 html {-webkit-text-size-adjust:100%;}
 
 
-/* BODY AND CONTAINER */
+/* BODY */
 body {background:#fff; color:#333; font-family:'Open Sans', sans-serif; font-size:15px; line-height:1.5; text-align:left; word-wrap:break-word;}
-#container {max-width:1200px; position:relative; margin:0 auto; padding:0 20px;}
-#container:after {content:''; display:block; height:0; clear:both;}
-
-
-/* MAIN CONTENT AREA */
-#content {width:65%; float:left; padding:20px 0;}
-#content-full {width:100%; float:left; padding:20px 0;}
 
 
 /* HEADINGS */
@@ -104,7 +101,7 @@ hr {height:1px; background:#eee; border:0; margin:0 0 10px;}
 /* ALIGNMENTS */
 .alignright {float:right;}
 .alignleft {float:left;}
-.aligncenter {display:block; margin-left:auto; margin-right:auto;}
+.aligncenter {clear:both; display:block; margin-left:auto; margin-right:auto;}
 
 
 /* TABLE AND LISTS */
@@ -149,8 +146,17 @@ button {font-size:inherit; font-family:inherit;}
 #header-third .search-submit:hover {background:#333; color:#fff;}
 
 
+/* CONTAINER */
+#container {max-width:1200px; clear:both; margin:0 auto; padding:0 20px;}
+
+
+/* MAIN CONTENT AREA */
+#content {width:65%; float:left; padding:20px 0;}
+#content-full {width:100%; clear:both; padding:20px 0;}
+
+
 /* HEADER FIRST */
-#header-first {width:100%; clear:both; float:left; padding:20px 0;}
+#header-first {clear:both; padding:20px 0;}
 
 
 /* HEADER FIRST LOGO */
@@ -162,9 +168,9 @@ button {font-size:inherit; font-family:inherit;}
 
 /* HEADER FIRST MENU */
 .nav-head {width:65%; float:right; margin:25px 0 0; text-align:right;}
-.nav-head ul {padding:0; margin:0; z-index:999; list-style:none;}
-.nav-head ul li {display:inline-block; position:relative; padding:0; margin:0 0 0 20px;}
-.nav-head ul li a {text-decoration:none; padding:0 0 5px; display:inline-block;}
+.nav-head ul {margin:0; padding:0; z-index:999; list-style:none;}
+.nav-head ul li {display:inline-block; position:relative; margin:0 0 0 20px; padding:0;}
+.nav-head ul li a {display:block; padding:0 0 5px; text-decoration:none;}
 .nav-head ul li a:hover {text-decoration:underline;}
 .nav-head .current-menu-item > a, .nav-head .current-menu-parent > a {text-decoration:underline;}
 
@@ -184,12 +190,12 @@ button {font-size:inherit; font-family:inherit;}
 
 
 /* HEADER SECOND */
-#header-second {width:100%; clear:both; float:left;}
+#header-second {clear:both;}
 
 
 /* HEADER SECOND HOMEPAGE IMAGE */
-.image-homepage {width:49%; float:left; margin:0 0 15px;}
-.header-img {width:100%; height:auto;}
+.image-homepage {width:49%; float:left; margin:0 0 20px;}
+.header-img {width:100%; height:auto; display:block;}
 
 
 /* HEADER SECOND HOMEPAGE SIDEBAR */
@@ -199,7 +205,7 @@ button {font-size:inherit; font-family:inherit;}
 
 
 /* HEADER THIRD */
-#header-third {width:96%; clear:both; float:left; padding:10px 2%; background:#08a0ff; color:#fff;}
+#header-third {clear:both; padding:10px 2%; background:#08a0ff; color:#fff;}
 
 
 /* HEADER THIRD SEARCH BAR */
@@ -208,8 +214,8 @@ button {font-size:inherit; font-family:inherit;}
 
 
 /* KNOWLEDGE BASE TEMPLATE */
-#categories-three {width:100%; clear:both; float:left; padding:10px 0 0;}
-#categories-four {width:100%; clear:both; float:left; padding:10px 0 0;}
+#categories-three {clear:both; padding:10px 0 0;}
+#categories-four {clear:both; padding:10px 0 0;}
 
 #categories-three .cat-list {width:30%; margin:0 2% 20px 0; padding:10px 1%; float:left; background:#f8f8f8;}
 #categories-four .cat-list {width:21.5%; margin:0 2% 20px 0; padding:10px 1%; float:left; background:#f8f8f8;}
@@ -219,7 +225,7 @@ button {font-size:inherit; font-family:inherit;}
 #categories-four ul:nth-of-type(4n+1) {clear:left;}
 #categories-four ul:nth-of-type(4n+4) {margin:0 0 20px 0;}
 
-.cat-name {margin:0 0 5px; list-style:none; font-size:1.2em; font-weight:bold; padding:0 0 10px; border-bottom:2px solid #08a0ff;}
+.cat-name {margin:0 0 5px; padding:0 0 10px; list-style:none; font-size:1.2em; font-weight:bold; border-bottom:2px solid #08a0ff;}
 .cat-name a:hover {text-decoration:none; color:#333;}
 .cat-description {padding:5px 0 0;}
 .post-name {margin:0 0 0 20px;}
@@ -227,21 +233,21 @@ button {font-size:inherit; font-family:inherit;}
 
 /* PAGE */
 .page-title {margin:0 0 20px;}
-.blog-page-text {clear:both; margin:0 0 20px;}
-.archive-description {width:100%; clear:both; float:left; font-style:italic;}
-.pagelink {width:100%; clear:both; float:left; padding:20px 0;}
+.blog-page-text {clear:both; padding:0 0 20px;}
+.archive-description {clear:both; padding:0 0 10px; font-style:italic;}
+.pagelink {clear:both; padding:10px 0;}
 
 
 /* POST */
-.post-list {width:100%; clear:both; float:left; margin:0 0 20px; border-bottom:1px solid #eee;}
-.post-single {width:100%; clear:both; float:left;}
+.post-list {clear:both; margin:0 0 20px; border-bottom:1px solid #eee;}
+.post-single {clear:both;}
 .post-title {margin:0 0 20px;}
 .post-title a:hover {color:#333; text-decoration:none;}
 .post-title-single {margin:0 0 20px;}
-.entry-content {width:100%; clear:both; float:left; margin:0 0 20px;}
+.entry-content {clear:both; padding:0 0 20px;}
 .sticky-title {margin:10px 0 20px; padding:2px 0; border-top:1px solid #eee; border-bottom:1px solid #eee; text-align:center;}
 .postmetadata {clear:both; margin:0 0 20px; padding:5px 10px; background:#f8f8f8; border:1px solid #eee;}
-.more {width:100%; clear:both; float:left; padding:0 0 20px;}
+.more {clear:both; padding:0 0 20px;}
 a.readmore {float:right; padding:2px 10px; background:#08a0ff; color:#fff; text-decoration:none;}
 a.readmore:hover {background:#333; text-decoration:none;}
 
@@ -253,13 +259,13 @@ a.readmore:hover {background:#333; text-decoration:none;}
 
 
 /* POST NAV */
-.post-nav {width:100%; clear:both; float:left;}
+.post-nav {clear:both;}
 .nav-prev {float:left; padding:5px 0;}
 .nav-next {float:right; padding:5px 0;}
 
 
 /* EDIT LINK */
-.edit-link {width:100%; clear:both; float:left; text-align:center; margin:10px 0; padding:5px 0; border-top:1px solid #eee; border-bottom:1px solid #eee;}
+.edit-link {clear:both; margin:10px 0; padding:5px 0; border-top:1px solid #eee; border-bottom:1px solid #eee; text-align:center;}
 
 
 /* IMAGE AND VIDEO */
@@ -268,7 +274,7 @@ img {max-width:100%; height:auto;}
 
 img.alignright {float:right; margin:0.4em 0 0.4em 1em;}
 img.alignleft {float:left; margin:0.4em 1em 0.4em 0;}
-img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
+img.aligncenter {clear:both; display:block; margin:0.4em auto 0.4em auto;}
 
 .wp-post-image, .single-image {float:left; margin:0.4em 1em 0.4em 0;}
 
@@ -281,66 +287,65 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* SEARCHFORM */
 .search-form {padding:10px 0;}
-.search-field {width:50%; margin:0 5px 0 0;}
+.search-field {margin:0 5px 0 0;}
 .search-form .screen-reader-text {display:none;}
 
 
 /* COMMENTS */
-#comments {width:100%; clear:both; float:left;}
+#comments {clear:both;}
 .comment-list, .comment-list .children {list-style:none; margin:0; padding:0;}
 .comment-list li {margin:0; padding:0;}
 .comment-list .children > li {margin:0 0 0 10px;}
-.comment-body {background:#f8f8f8; border:1px solid #eee; padding:10px; margin:0 0 20px;}
+.comment-body {background:#f8f8f8; border:1px solid #eee; margin:0 0 20px; padding:10px;}
 .comment-content {padding:10px 0;}
-.comment-notes, .form-allowed-tags {font-size:0.8em; padding:5px 0;}
-.comments-title {margin:0 0 20px; font-size:1.45em;}
-.comment-reply-title, .no-comments {margin:0; font-size:1.45em;}
-.comment-author .avatar {margin:0 5px 0 0; border-radius:5px;}
+.comment-notes, .form-allowed-tags {padding:5px 0; font-size:0.8em;}
+.comments-title, .comment-reply-title, .no-comments {margin:0 0 10px; font-size:1.45em;}
+.comment-author .avatar {margin:0 10px 0 0; border-radius:5px;}
+.comment-metadata {padding:5px 0 0;}
 .bypostauthor .comment-content {font-style:italic;}
 .comment-awaiting-moderation {font-style:italic;}
 
 
 /* COMMENTS RESPOND */
-#respond {width:100%; clear:both; padding:0 0 10px;}
+#respond {clear:both; padding:0 0 10px;}
 .comment-form label {padding:0 0 5px; display:block;}
-.comment-form input, .comment-form textarea {width:80%;}
-.comment-form input[type="submit"] {width:auto;}
+.comment-form textarea {width:90%;}
 
 
 /* COMMENTS NAV */
-.comment-nav {width:100%; clear:both; float:left;}
+.comment-nav {clear:both;}
 .comment-prev {float:left; padding:10px 0;}
 .comment-next {float:right; padding:10px 0;}
 
 
 /* SIDEBAR AND WIDGETS */
 #sidebar {width:33%; float:right; padding:20px 0 0;}
-.widget {padding:0 0 10px; margin:0 0 20px; border-bottom:1px solid #eee;}
+.widget {margin:0 0 20px; padding:0 0 10px; border-bottom:1px solid #eee;}
 .widgettitle {margin:0 0 10px;}
 
 
 /* FOOTER */
-#footer {width:96%; clear:both; float:left; padding:0 2%; background:#08a0ff; color:#fff;}
+#footer {clear:both; padding:0 2%; background:#08a0ff; color:#fff;}
 #footer a {color:#fff;}
-.site-info {clear:both; text-align:center; padding:10px 0;}
+#footer .widget {border-bottom:1px solid #fff;}
+#footer .widgettitle {color:#fff;}
+.site-info {clear:both; padding:10px 0; text-align:center;}
 
 
 /* FOOTER WIDGET AREA */
-#footer-widgets {width:100%; clear:both; float:left;}
+#footer-widgets {clear:both;}
 .footer-left {float:left; width:32%; margin:20px 0 0;}
 .footer-middle {float:left; width:32%; margin:20px 2% 0;}
 .footer-right {float:right; width:32%; margin:20px 0 0;}
 
-#footer .widget {border-bottom:1px solid #fff;}
-#footer .widgettitle {color:#fff;}
-
 
 /* MOBILE */
 @media screen and (max-width:767px) { 
-	/* BODY AND CONTAINER */
-	body {font-size:15px; line-height:1.5;}
+	/* BODY */
 	body.custom-background {background-image:none !important;}
-	#container {width:96%; padding:10px 2% 0;}
+
+	/* CONTAINER */
+	#container {padding:10px 2% 0;}
 
 	/* MAIN CONTENT AREA */
 	#content, #content-full {width:100%; clear:both; float:left; padding:0 0 20px;}
@@ -356,14 +361,15 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.nav-head {display:none;} 
 
 	/* HEADER FIRST MOBILE MENU */
-	.mobile-nav-container {clear:both; display:block;}
-	.mobile-nav-toggle {clear:both; display:block; margin:0 0 20px; padding:10px 2%; background:#08a0ff; color:#fff; cursor:pointer;}
+	.mobile-nav-container {display:block; clear:both; margin:0 0 20px;}
+	.mobile-nav-toggle {display:block; clear:both; padding:10px 20px; background:#08a0ff; color:#fff; cursor:pointer;}
 	.mobile-nav-toggle:hover {color:#eee;}
-	.mobile-nav {clear:both; padding:10px 20px 10px 0; margin:0 5px 20px; background:#fff; border:2px solid #eee;}
+	.mobile-nav {clear:both; padding:10px 20px; background:#f8f8f8; border-bottom:1px solid #eee;}
 	.mobile-nav .subnav-toggle {float:right; display:block; margin:-45px 0 0; padding:2px 15px;}
 	.mobile-nav ul {list-style:none;}
+	.mobile-nav ul li {margin:0;}
 	.mobile-nav ul li a {display:block; margin:0 0 10px 0; padding:0 0 12px; border-bottom:2px dotted #eee; text-decoration:none;}
-	.mobile-nav ul li a:hover {color:#333;}
+	.mobile-nav .sub-menu li {margin:0 0 0 20px;}
 
 	/* HEADER SECOND HOMEPAGE IMAGE */
 	.image-homepage {width:100%; clear:both;}
@@ -374,7 +380,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#header-second .widgettitle {padding:0; background:none;}
 
 	/* HEADER THIRD */
-	#header-third {width:94%; padding:5px 3% 10px; margin:0 0 20px;}
+	#header-third {margin:0 0 20px; padding:5px 3% 10px;}
 
 	/* HEADER THIRD SEARCH BAR */
 	#header-third .searchbar-title {width:100%; clear:both; text-align:center;}
@@ -400,9 +406,9 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.widgettitle {padding:5px 3%; background:#08a0ff; color:#fff;}
 
 	/* FOOTER */
-	#footer {width:94%; padding:10px 3%;}
+	#footer {padding:10px 3%;}
+	#footer .widgettitle {padding:0; background:none;}
 
 	/* FOOTER WIDGET AREA */
 	.footer-right, .footer-middle, .footer-left {width:100%; clear:both; float:left; margin:0;} 
-	#footer .widgettitle {padding:0; background:none;}
 }
